<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Michael Erichsen.
  ~
  ~ The program is distributed under the terms of the GNU Affero General Public License v3.0
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/supplierDetailAddTextView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/supplier_fragment_prompt"
            android:textSize="18sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/supplierDetailAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:contentDescription="@string/add"
            app:srcCompat="@android:drawable/ic_input_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/supplierDetailAddTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/supplierDetailDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            app:srcCompat="@android:drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/supplierDetailAddBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/supplierDetailSupplierTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/supplierDetailAddTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/supplierDetailSupplierEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier"
                android:inputType="text"
                android:textSize="24sp"
                app:autoSizeTextType="uniform" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/supplierDetailChainTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/supplierDetailSupplierTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/supplierDetailChainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chain"
                android:inputType="text"
                android:textSize="24sp"
                app:autoSizeTextType="uniform" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/supplierDetailChainTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/supplierDetailTimestampTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/timestamp"
                android:inputType="none"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>