...
    <string name="clickToDelete">Klik her for at slette</string>
    <string name="no_products_found">Der er ikke fundet nogen produkter</string>
    <string name="invalid_sort_key">Ugyldig sorteringsnøgle: </string>
    <string name="supplier_fragment_prompt">Klik for at oprette eller slette en butik</string>
    <string name="timestamp">Timestamp</string>
    <string name="chain">Kæde</string>
    <string name="add">Tilføj</string>
    <string name="delete">Slet</string>
    <string name="supplier_added">Butik tilføjet</string>
    <string name="initial_load_done">Præfabrikerede data indsat</string>
    <string name="found_brands">Fundne varemærker</string>
    <string name="enter_brand_prompt">Indtast et varemærke eller begyndelsen af det</string>
    <string name="itemno_not_found">Varenummer ikke fundet i databasen</string>
    <string name="calculation_failed">Beregning lykkedes ikke</string>
...
